--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -9,3 +9,6 @@
 /Gerente.class
 /TesteFuncionario.class
 /TesteGerente.class
+/TesteReferencias.class
+/ControleBonificacao.class
+/EditorVideo.class
