Aula 04 - Heranca e o uso construtores

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -12,3 +12,6 @@
 /TesteReferencias.class
 /ControleBonificacao.class
 /EditorVideo.class
+/ContaCorrente.class
+/ContaPoupanca.class
+/TesteContas.class
