--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -16,3 +16,9 @@
 /ContaPoupanca.class
 /TesteContas.class
 /Designer.class
+/SistemaInterno.class
+/TesteSistema.class
+/Administrador.class
+/FuncionarioAutenticavel.class
+/ClienteSistema.class
+/Autenticavel.class
