Aula 07 - Praticando heranca e interfaces

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -22,3 +22,8 @@
 /FuncionarioAutenticavel.class
 /ClienteSistema.class
 /Autenticavel.class
+/AutenticacaoUtil.class
+/Tributavel.class
+/CalculadorDeImposto.class
+/SeguroDeVida.class
+/TesteTributaveis.class
